--- a/serviexpress/core/templates/core/inicio.html
+++ b/serviexpress/core/templates/core/inicio.html
@@ -1,20 +1,21 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="text-center">
+{% load static %}
+<div class="text-center justify-center space-x-4">
     <h1 class="text-4xl font-bold mb-6">Bienvenido a ServiExpress</h1>
     <p class="text-xl mb-8">Tu taller mecánico de confianza</p>
     
-    <!-- {% if not user.is_authenticated %}
+    {% if not user.is_authenticated %}
     <div class="flex justify-center space-x-4">
-        <a href="{% url 'login' %}" class="bg-blue-500 text-white px-6 py-3 rounded hover:bg-blue-600">
+        <!-- <a href="{% url 'login' %}" class="bg-blue-500 text-white px-6 py-3 rounded hover:bg-blue-600">
             Iniciar Sesión
         </a>
         <a href="{% url 'registro' %}" class="bg-green-500 text-white px-6 py-3 rounded hover:bg-green-600">
             Registrarse
-        </a>
+        </a> -->
     </div>
-    {% else %} -->
-    <div>
+    {% else %}
+    <div >
         <p>¿En qué podemos ayudarte hoy?</p>
         <!-- <a href="{% url 'servicios:lista' %}" class="bg-blue-500 text-white px-6 py-3 rounded hover:bg-blue-600 inline-block mt-4">
             Ver Servicios</a> -->
@@ -46,6 +47,111 @@
         {% endif %}
 
     </div>
+    <div class="py-4">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-9 col-md-9">
+                <p class="t600 display-5 txt-naranja text-center">¿Quienes Somos?</p>
+                <h3 class="text-justify txt-plomo">Un grupo de alumnos recién egresados de la carrera de mecánica automotriz, deciden poner en 
+                    funcionamiento un taller mecánico haciendo gala de las distintas habilidades adquiridas a lo largo de su 
+                    carrera.</h3>
+                <p class="text-justify txt-plomo">Cada uno de los socios aportan con su experiencia y habilidades particulares, así mientras 
+                    uno es especialista en electrónica automotriz, otro es especialista en cajas de cambio y otro en 
+                    suspensión y dirección, entre varios más. En su conjunto pueden prestar un servicio completo a los clientes que necesiten 
+                    tareas de mecánica en general para sus vehículos a bencina o diesel.</p>
+            </div>
+            <div>
+                <h1 class="text-center">Somos</h1>
+                <div class="row">
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-3 col-md-4 text-center separa-hori-lg separa-verti">
+                        <h4>Juan Pedro Perez</h4>
+                        <p>fundador e Ingeniero civil mecánico</p>
+                        <img class="img-bordes" src="{% static 'img/tec1.jpg' %}" width="290" height="200">
+                        <p class="col-lg-12 text-justify">Titulado en la "Universidad Catolica de Chile", especializado en electricidad
+                            y carrocería automotriz, es una persona meticulosa y apasionada por resolver
+                            problemas eléctricos en vehículos de alta gama. Su habilidad para restaurar
+                            sistemas de seguridad y luces LED en tiempo récord lo convierte en un referente
+                            en su campo.</p>
+                    </div>
+                    <div class="col-lg-3 col-md-4 text-center separa-hori-lg separa-verti">
+                        <h4>Michael Sanchez</h4>
+                        <p>Ingeniero civil mecánico</p>
+                        <img class="img-bordes" src="{% static 'img/tec2.jpg' %}" width="290" height="200">
+                        <p class="col-lg-12 text-justify">Titulado en la "Universidad Catolica de Chile" con especialización en cajas
+                            de cambios y suspensión, es una profesional audaz y experta en transformar
+                            vehículos todoterreno en máquinas imparables. Su destreza para ajustar
+                            transmisiones y amortiguadores garantiza un rendimiento excepcional en
+                            terrenos extremos.</p>
+                    </div>
+                    <div class="col-lg-3 col-md-4 text-center separa-hori-lg separa-verti">
+                        <h4>Marco Perez</h4>
+                        <p>Ingeniero civil mecánico</p>
+                        <img class="img-bordes" src="{% static 'img/tec3.jpg' %}" width="290" height="200">
+                        <p class="col-lg-12 text-justify">Graduado en la "Universidad Catolica de Chile" y especialista en dirección y gases,
+                            es un ingeniero innovador comprometido con la eficiencia y el rendimiento de los
+                            motores. Su capacidad para optimizar sistemas de dirección asistida y reducir
+                            emisiones lo posiciona como un líder en el cumplimiento de estándares ambientales
+                            mientras potencia los vehículos.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
     {% endif %}
+</div>
+
+<div class="py-4">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-9 col-md-9">
+                <p class="t600 display-5 txt-naranja text-center">¿Quienes Somos?</p>
+                <h3 class="text-justify txt-plomo">Un grupo de alumnos recién egresados de la carrera de mecánica automotriz, deciden poner en 
+                    funcionamiento un taller mecánico haciendo gala de las distintas habilidades adquiridas a lo largo de su 
+                    carrera.</h3>
+                <p class="text-justify txt-plomo">Cada uno de los socios aportan con su experiencia y habilidades particulares, así mientras 
+                    uno es especialista en electrónica automotriz, otro es especialista en cajas de cambio y otro en 
+                    suspensión y dirección, entre varios más. En su conjunto pueden prestar un servicio completo a los clientes que necesiten 
+                    tareas de mecánica en general para sus vehículos a bencina o diesel.</p>
+            </div>
+            <div>
+                <h1 class="text-center">Somos</h1>
+                <div class="row">
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-3 col-md-4 text-center separa-hori-lg separa-verti">
+                        <h4>Juan Pedro Perez</h4>
+                        <p>fundador e Ingeniero civil mecánico</p>
+                        <img class="img-bordes" src="{% static 'img/tec1.jpg' %}" width="290" height="200">
+                        <p class="col-lg-12 text-justify">Titulado en la "Universidad Catolica de Chile", especializado en electricidad
+                            y carrocería automotriz, es una persona meticulosa y apasionada por resolver
+                            problemas eléctricos en vehículos de alta gama. Su habilidad para restaurar
+                            sistemas de seguridad y luces LED en tiempo récord lo convierte en un referente
+                            en su campo.</p>
+                    </div>
+                    <div class="col-lg-3 col-md-4 text-center separa-hori-lg separa-verti">
+                        <h4>Michael Sanchez</h4>
+                        <p>Ingeniero civil mecánico</p>
+                        <img class="img-bordes" src="{% static 'img/tec2.jpg' %}" width="290" height="200">
+                        <p class="col-lg-12 text-justify">Titulado en la "Universidad Catolica de Chile" con especialización en cajas
+                            de cambios y suspensión, es una profesional audaz y experta en transformar
+                            vehículos todoterreno en máquinas imparables. Su destreza para ajustar
+                            transmisiones y amortiguadores garantiza un rendimiento excepcional en
+                            terrenos extremos.</p>
+                    </div>
+                    <div class="col-lg-3 col-md-4 text-center separa-hori-lg separa-verti">
+                        <h4>Marco Perez</h4>
+                        <p>Ingeniero civil mecánico</p>
+                        <img class="img-bordes" src="{% static 'img/tec3.jpg' %}" width="290" height="200">
+                        <p class="col-lg-12 text-justify">Graduado en la "Universidad Catolica de Chile" y especialista en dirección y gases,
+                            es un ingeniero innovador comprometido con la eficiencia y el rendimiento de los
+                            motores. Su capacidad para optimizar sistemas de dirección asistida y reducir
+                            emisiones lo posiciona como un líder en el cumplimiento de estándares ambientales
+                            mientras potencia los vehículos.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
