--- a/serviexpress/templates/base.html
+++ b/serviexpress/templates/base.html
@@ -1,16 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>ServiExpress - {% block title %}Taller Mecánico{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/estilos.css' %}">
+
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-200">
     <head>
-        <nav class="bg-blue-600 text-white p-4">
+        <nav class="bg-blue-300 p-4">
             <div class="container mx-auto flex justify-between items-center">
-                <a href="/" class="text-xl font-bold">ServiExpress</a>
-                <div class="flex space-x-4">
+                <a href="/"><img src="{% static 'img/logo.png' %}" width="60" style="cursor: pointer;"></a>
+                <a href="/" class="font-bold">ServiExpress</a>
+                <div class="">
                     {% if user.is_authenticated %}
                         {% if user.rol == 'administrador' %}
                             <a href="{% url 'servicios:admin' %}" class="hover:text-blue-200">Gestionar Servicios</a>
@@ -20,14 +29,14 @@
                         <span>Bienvenido: {{ user.username }}</span>
                         <a href="{% url 'logout' %}" class="bg-red-500 px-3 py-1 rounded hover:bg-red-600">Cerrar Sesión</a>
                     {% else %}
-                        <a href="{% url 'login' %}" class="hover:text-blue-200">Iniciar Sesión</a>
-                        <a href="{% url 'registro' %}" class="bg-green-500 px-3 py-1 rounded hover:bg-green-600">Registrarse</a>
+                        <a href="{% url 'login' %}" class="link-custom">Iniciar Sesión</a>
+                        <a href="{% url 'registro' %}" class="link-custom">Registrarse</a>
                     {% endif %}
                 </div>
             </div>
         </nav>
     </head>
-    <main>
+    <main class="">
         <div class="container mx-auto mt-8 px-4">
             {% if messages %}
                 <div class="mb-4">
@@ -42,20 +51,38 @@
                     {% endfor %}
                 </div>
             {% endif %}
-    
-            {% block content %}{% endblock %}
         </div>
+        {% block content %}{% endblock %}
     </main>
-    <footer class="justify-content-center">
-        <div class="col">
-            <ul class=""> <!--centrer, para centrar los 3 iconos-->
-                <p><a href=""> <img src="" width="50"></a> | 2024 | Mecanica | Taller mecanico Serviexpress |</p>
-                <p>Visitanos / Siguenos</p>
-                <a class="" href="https://www.facebook.com/?locale=es_LA"><i class="">facebook - </i></a>
-                <a class="" href="https://www.instagram.com/"><i class="">instagram - </i></a>
-                <a class="" href="https://twitter.com/?lang=es"><i class="">twitter</i></a>
-            </ul>
+    <footer class=" text-center">
+        <div class="copyright">
+            <div class="container-fluid">
+                <hr>
+                <div class="row">
+                    <div class="col-2"></div>
+                    <div class="col-4 txt-plomo">
+                        <p><b><a href="/"> <img src="{% static 'img/logo1.png' %}" width="40"></a> | 2024 | Mecanica | Taller mecanico Serviexpress |</b></p>
+                    </div>
+                    <div class="col-4 t700">
+                        <ul class="nav justify-content-center"> <!--centrer, para centrar los 3 iconos-->
+                            <li class="txt-plomo ">Visitanos/Siguenos</li>
+                            <li><a class="text-decoration-none txt-plomo" href="https://www.facebook.com/?locale=es_LA"><i class="fa fa-brands fa-facebook px-2"></i></a></li>
+                            <li><a class="text-decoration-none" href="https://www.instagram.com/"><i class="fa fa-brands fa-instagram px-2"></i></a></li>
+                            <li><a class="text-decoration-none" href="https://twitter.com/?lang=es"><i class="fa fa-brands fa-twitter px-2"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-2"></div>
+                </div>
+            </div>
         </div>
     </footer>
+    <!-- jquery-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
