cambio en restringir contraseñas, mas debiles para prueba

--- a/serviexpress/usuarios/templates/usuarios/registro.html
+++ b/serviexpress/usuarios/templates/usuarios/registro.html
@@ -21,10 +21,14 @@
             <input type="password" name="password2" required class="w-full px-3 py-2 border rounded">
         </div>
         <div class="mb-4">
+            <label class="block mb-2">Teléfono</label>
+            <input type="text" name="telefono" required class="w-full px-3 py-2 border rounded">
+        </div>
+        <div class="mb-4">
             <label class="block mb-2">Rol</label>
             <select name="rol" class="w-full px-3 py-2 border rounded">
                 <option value="cliente">Cliente</option>
-                <option value="cliente">Empleado</option>
+                <option value="empleado">Empleado</option>
             </select>
         </div>
         <button type="submit" class="w-full bg-green-500 text-white py-2 rounded hover:bg-green-600">
