--- a/serviexpress/templates/base.html
+++ b/serviexpress/templates/base.html
@@ -26,8 +26,8 @@
                             <a href="{% url 'reservas:informes' %}" class="hover:text-blue-200">Informes</a>
                         {% endif %}
                         
-                        <span>Bienvenido: {{ user.username }}</span>
-                        <a href="{% url 'logout' %}" class="bg-red-500 px-3 py-1 rounded hover:bg-red-600">Cerrar Sesión</a>
+                        <span>Bienvenido: {{ user.username }} </span>
+                        <a href="{% url 'logout' %}" class="link-custom">Cerrar Sesión</a>
                     {% else %}
                         <a href="{% url 'login' %}" class="link-custom">Iniciar Sesión</a>
                         <a href="{% url 'registro' %}" class="link-custom">Registrarse</a>
